<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/main_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/main_usernameInputField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/main_activity_email_placeholder"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/main_username_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_divider" />

    <EditText
        android:id="@+id/main_passwordInputField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/main_activity_password_placeholder"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_usernameInputField" />

    <Button
        android:id="@+id/main_login_button"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:onClick="goToViewTasksActivity"
        android:text="@string/main_activity_login_button"
        app:layout_constraintEnd_toEndOf="@+id/main_passwordInputField"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/main_passwordInputField"
        app:layout_constraintTop_toBottomOf="@+id/main_passwordInputField" />

    <TextView
        android:id="@+id/main_password_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_password"
        app:layout_constraintBottom_toTopOf="@+id/main_passwordInputField"
        app:layout_constraintStart_toStartOf="@+id/main_passwordInputField" />

    <TextView
        android:id="@+id/main_username_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_username"
        app:layout_constraintBottom_toTopOf="@+id/main_usernameInputField"
        app:layout_constraintStart_toStartOf="@+id/main_usernameInputField" />

    <Button
        android:id="@+id/main_registerUserButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:onClick="goToRegisterUser"
        android:text="@string/main_activity_register_user_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/main_login_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/main_login_button" />

    <TextView
        android:id="@+id/main_madeByText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:text="@string/main_activity_made_by"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/main_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.20" />

    <TextView
        android:id="@+id/main_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/main_activity_subtitle"
        app:layout_constraintEnd_toEndOf="@+id/main_title"
        app:layout_constraintStart_toStartOf="@+id/main_title"
        app:layout_constraintTop_toBottomOf="@+id/main_title" />

</androidx.constraintlayout.widget.ConstraintLayout>