<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateTaskActivity">

    <TextView
        android:id="@+id/create_task_task_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleTask"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/create_task_task_title_textfield"
        app:layout_constraintStart_toStartOf="@+id/create_task_task_title_textfield" />

    <TextView
        android:id="@+id/create_task_task_description_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descriptionTask"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/create_task_task_description_textfield"
        app:layout_constraintStart_toStartOf="@+id/create_task_task_description_textfield" />

    <TextView
        android:id="@+id/create_task_task_table_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:onClick="createThisTask"
        android:text="@string/giveLabelToTask"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/create_task_date_button"
        app:layout_constraintTop_toBottomOf="@+id/create_task_date_text_view" />

    <TextView
        android:id="@+id/create_task_task_deadline_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deadlineTask"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/create_task_date_button"
        app:layout_constraintStart_toStartOf="@+id/create_task_date_button" />

    <EditText
        android:id="@+id/create_task_task_description_textfield"
        android:layout_width="288dp"
        android:layout_height="47dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/descriptionTextFieldTask"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/create_task_task_title_textfield"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="@+id/create_task_task_title_textfield"
        app:layout_constraintTop_toBottomOf="@+id/create_task_task_title_textfield" />

    <EditText
        android:id="@+id/create_task_task_title_textfield"
        android:layout_width="288dp"
        android:layout_height="47dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/titleTextFieldTask"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/create_task_create_task_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:onClick="createThisTask"
        android:text="@string/create_task_create_button"
        app:layout_constraintEnd_toEndOf="@+id/create_task_manage_labels_button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/create_task_manage_labels_button"
        app:layout_constraintTop_toBottomOf="@+id/create_task_manage_labels_button" />

    <Spinner
        android:id="@+id/create_task_spinner"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="@+id/create_task_task_table_text_view"
        app:layout_constraintTop_toBottomOf="@+id/create_task_task_table_text_view" />

    <Button
        android:id="@+id/create_task_date_button"
        android:layout_width="144dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:text="@string/selectDate"
        app:layout_constraintEnd_toStartOf="@+id/create_task_time_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/create_task_task_description_textfield"
        app:layout_constraintTop_toBottomOf="@+id/create_task_task_description_textfield" />

    <Button
        android:id="@+id/create_task_time_button"
        android:layout_width="144dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:text="@string/selectTime"
        app:layout_constraintEnd_toEndOf="@+id/create_task_task_description_textfield"
        app:layout_constraintStart_toEndOf="@+id/create_task_date_button"
        app:layout_constraintTop_toBottomOf="@+id/create_task_task_description_textfield" />

    <TextView
        android:id="@+id/create_task_date_text_view"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="8dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/create_task_time_text_view"
        app:layout_constraintStart_toStartOf="@+id/create_task_date_button"
        app:layout_constraintTop_toBottomOf="@+id/create_task_date_button" />

    <TextView
        android:id="@+id/create_task_time_text_view"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        app:layout_constraintEnd_toEndOf="@+id/create_task_time_button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/create_task_date_text_view"
        app:layout_constraintTop_toBottomOf="@+id/create_task_time_button" />

    <Button
        android:id="@+id/create_task_manage_labels_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:onClick="goToManageLabel"
        android:text="@string/create_task_manage_labels_button"
        app:layout_constraintEnd_toEndOf="@+id/create_task_task_description_textfield"
        app:layout_constraintStart_toStartOf="@+id/create_task_task_description_textfield"
        app:layout_constraintTop_toBottomOf="@+id/create_task_spinner" />

</androidx.constraintlayout.widget.ConstraintLayout>